--- a/src/components/map.css
+++ b/src/components/map.css
@@ -22,19 +22,14 @@
 .toolbox {
   display: flex;
   flex-direction: row;
-  /* flex-basis: 100%; */
-  flex: 1;
+  flex-basis: 100%;
+  /* flex: 1; */
   align-items: center;
-  /* justify-content: center; */
+  justify-content: center;
   margin: 10px;
   border: 2px solid whitesmoke;
   width: 50%;
   height: 50%;
-}
-
-.sidebar {
-  display: flex;
-  flex-direction: column;
 }
 
 .button {
