--- a/src/components/map.css
+++ b/src/components/map.css
@@ -4,12 +4,12 @@
   flex-direction: row;
   flex-wrap: wrap;
   width: 100%;
-  background-color: #32527b;
+  background-color: #2E2E2E;
 }
 
 .map {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   flex-basis: 100%;
   flex: 1;
   margin: 10px;
