--- a/src/components/map.css
+++ b/src/components/map.css
@@ -4,7 +4,7 @@
   flex-direction: row;
   flex-wrap: wrap;
   width: 100%;
-  background-color: #2E2E2E;
+  background-color: #5f6d93;
 }
 
 .map {
@@ -27,7 +27,7 @@
   align-items: center;
   justify-content: center;
   margin: 10px;
-  border: 2px solid whitesmoke;
+  border: 1px solid whitesmoke;
   width: 50%;
   height: 50%;
 }
